Fix Layout bug on Add Task

--- a/css/add-task.css
+++ b/css/add-task.css
@@ -1,16 +1,9 @@
-main {
-  margin-left: 90px;
-  width: 90%;
-}
-
 .add-task-section {
   display: flex;
   align-items: flex-start;
-  justify-content: space-between;
+  justify-content: center;
   flex-direction: column;
-  margin-left: 74px;
-  margin-right: 74px;
-  margin-top: 64px;
+  align-items: center;
 }
 
 .add-task-section h1 {
